# snakemake-mcp-server

./: .gitignore  Developer_Guide.md  README.md  pyproject.toml  run_demo_wrapper.sh  snakemake-wrapper-tutorial.md
llm/: portable-workflow.txt
src/snakemake_mcp_server/: fastapi_app.py  jobs.py  mcp_factory.py  schemas.py  server.py  snakefile_parser.py  utils.py  workflow_runner.py  wrapper_runner.py
src/snakemake_mcp_server/api/: main.py
src/snakemake_mcp_server/api/routes/: demo.py  health.py  tool_processes.py  tools.py  workflow_processes.py
src/snakemake_mcp_server/cli/: mcp.py  parse.py  rest.py  verify.py
tests/: conftest.py  test_megahit_wrapper.py  test_rest_api_integration.py  test_run_wrapper_error.py  test_run_wrapper_success.py  test_snakefile_conversion.py  test_tool_meta_sufficiency.py  test_workflow_execution.py  test_wrapper_logic_integration.py  test_wrapper_runner.py
