[project]
name = "snakemake-mcp-server"
version = "0.1.0"
description = "A server for running Snakemake wrappers via MCP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "snakemake",
    "anyio",
    "pytest",
    "click",
]

[project.scripts]
"snakemake-mcp-server" = "snakemake_mcp_server.server:cli"

[project.urls]
"Homepage" = "https://github.com/excelwang/snakemake-mcp-server"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]